--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -101,6 +101,7 @@
     <uses-permission android:name="android.permission.MANAGE_SCOPED_ACCESS_DIRECTORY_PERMISSIONS" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.MEDIA_CONTENT_CONTROL" />
+    <uses-permission android:name="android.permission.WRITE_DEVICE_CONFIG" />
 
     <application android:label="@string/settings_label"
             android:icon="@mipmap/ic_launcher"
@@ -2976,6 +2977,16 @@
             android:exported="true">
             <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
                        android:value="com.android.settings.applications.AppAndNotificationDashboardFragment"/>
+        </activity>
+
+        <activity
+            android:name=".Settings$AppsPermissions"
+            android:label="@string/space_manager"
+            android:icon="@drawable/ic_homepage_apps_permissions"
+            android:parentActivityName="@string/space_manager"
+            android:exported="true">
+            <meta-data android:name="com.android.settings.FRAGMENT_CLASS"
+                       android:value="com.android.settings.appspermission.AppsPermissions"/>
         </activity>
 
         <activity
